--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -22,7 +22,7 @@ playback = { path = "../../playback" }
 lazy_static = "1.5.0"
 dunce = "1.0.4"
 log = "0.4.22"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["chrono", "registry"] }
 paste = "1.0.15"
 tokio-util = "0.7.11"
 num_cpus = "1.16.0"
@@ -30,6 +30,8 @@ anyhow = { version = "1.0.89", features = ["backtrace"] }
 futures = "0.3.30"
 async-trait = "0.1.83"
 sysinfo = { version = "0.31.4", features = ["windows"] }
+tracing-appender = "0.2.3"
+chrono = "0.4.38"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
