fix: Android building script

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ android {
                     def libcSoDest = file("$jniLibsDir/$abi/libc++_shared.so")
                     if (libcSoDest.exists()) {
                         println "Deleting $libcSoDest"
-                        libcSoDest.delete()
+                        libcSoDest.delete() // Cleanup files before building
                     }
                 }
             }
