feat: Implement lens flare based on shader toy

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
 
   shaders:
     - lib/shaders/gradient.frag
+    - lib/shaders/lens_flare.frag
 
   # To add assets to your application, add an assets section, like this:
   assets:
