--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/disk-color.svg
     - assets/disk-border.svg
     - assets/disk-center.svg
+    - assets/branding-text.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
