chore: Manually downloading tar not working

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,11 @@ jobs:
     - run:
         name: Download Flutter
         command: |
-          curl -L -o flutter.tar.gz https://github.com/flutter/flutter/archive/refs/tags/3.24.4.tar.gz
-          tar -xzf flutter.tar.gz
-          ls -l -a
+          git clone --branch 3.24.4 --depth 1 https://github.com/flutter/flutter.git
     - run:
         name: Set up Flutter
         command: |
-          export PATH="$PATH:$HOME/project/flutter-3.24.4/bin"
+          export PATH="$PATH:$HOME/project/flutter/bin"
           flutter doctor
     - run:
         name: Run Flutter setup
