--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,11 @@ jobs:
     - run:
         name: Download Flutter
         command: |
-          git clone --branch 3.24.4 --depth 1 https://github.com/flutter/flutter.git
+          git clone --branch 3.24.4 --depth 1 https://github.com/flutter/flutter.git ../
     - run:
         name: Setup Flutter Environment Variables
         command: |
-          echo 'export PATH="$PATH:$HOME/project/flutter/bin"' >> "$BASH_ENV"
+          echo 'export PATH="$PATH:$HOME/flutter/bin"' >> "$BASH_ENV"
     - run:
         name: Run Flutter setup
         command: |
