--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,17 +13,24 @@ jobs:
         name: Install dependencies
         command: |
           sudo apt-get update
-          sudo apt-get install libprotoc23 liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
+          sudo apt-get install unzip liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
+    - run:
+        name: Setup Flutter Environment Variables
+        command: |
+          echo 'export PATH="$PATH:$HOME/flutter/bin:$PATH:$HOME/protoc/bin:$HOME/.pub-cache/bin"' >> "$BASH_ENV"
+    - run:
+      name: Download Protobuf
+      command: |
+        curl -L -o ../protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v28.3/protoc-28.3-linux-aarch_64.zip
+        unzip ../protoc.zip -d ../protoc
+        whereis protoc
+        protoc --version
     - rust/install:
         version: stable
     - run:
         name: Download Flutter
         command: |
           git clone --branch 3.24.4 --depth 1 https://github.com/flutter/flutter.git ../flutter
-    - run:
-        name: Setup Flutter Environment Variables
-        command: |
-          echo 'export PATH="$PATH:$HOME/flutter/bin:$HOME/.pub-cache/bin"' >> "$BASH_ENV"
     - run:
         name: Run Flutter setup
         command: |
@@ -40,8 +47,6 @@ jobs:
         name: Activate Protobuf
         command: |
           flutter pub global activate protoc_plugin
-          whereis protoc
-          protoc --version
     - run:
         name: Flutter pub get
         command: flutter pub get
