--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
-# This config was automatically generated from your source code
-# Stacks detected: cicd:github-actions:.github/workflows,deps:rust:.
 version: 2.1
+
 orbs:
   rust: circleci/rust@1.6.1
+
 jobs:
   build-arm:
     machine:
@@ -13,7 +13,7 @@ jobs:
         name: Install dependencies
         command: |
           sudo apt-get update
-          sudo apt-get install unzip liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
+          sudo apt-get install unzip liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev zip
           sudo apt remove --purge protobuf-compiler
     - run:
         name: Setup Flutter Environment Variables
@@ -58,15 +58,36 @@ jobs:
         name: Build linux
         no_output_timeout: 30m
         command: flutter build linux --release --verbose
-    - store_artifacts:
-        path: build/linux/arm64/release/bundle/
-  release-linux:
-    executor: default_image
-    steps:
-    - checkout
-    - store_artifacts:
-        path: artifacts
+    - run:
+        name: Package artifact
+        command: |
+          cd build/linux/arm64/release/
+          TAG=${CIRCLE_TAG}
+          HASH=${CIRCLE_SHA1:0:7}
+          zip -r Rune-${TAG}-${HASH}-linux-aarch64.zip bundle/
+    - run:
+        name: Upload to GitHub Release
+        command: |
+          TAG=${CIRCLE_TAG}
+          HASH=${CIRCLE_SHA1:0:7}
+          ARTIFACT="build/linux/arm64/release/Rune-${TAG}-${HASH}-linux-aarch64.zip"
+          
+          # GitHub CLI installation
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          sudo apt update
+          sudo apt install gh
+          
+          # Upload to GitHub release
+          gh release upload ${TAG} ${ARTIFACT} --clobber
+
 workflows:
+  version: 2
   build:
     jobs:
-      - build-arm
+      - build-arm:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
