--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,8 @@ flutter:
     - assets/disk-border.svg
     - assets/disk-center.svg
     - assets/branding-text.svg
+    - assets/startup_0.mp3
+    - assets/startup_1.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
