--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -10,8 +10,8 @@ path = "src/lib.rs"
 
 [dependencies]
 log = { version = "0.4.22" }
-sea-orm = { version="0.12.15", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "debug-print" ] }
-sea-orm-migration = "0.12.15"
+sea-orm = { version="1.1.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "debug-print" ] }
+sea-orm-migration = "1.1.0"
 async-graphql = "7.0.10"
 migration = { path = "../migration" }
 metadata = { path = "../metadata" }
@@ -32,3 +32,5 @@ anyhow = {version="1.0.86",  features = ["backtrace"] }
 rayon = "1.10.0"
 seq-macro = "0.3.5"
 once_cell = "1.19.0"
+rust_decimal = "1.36.0"
+rust_decimal_macros = "1.36.0"
