--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -23,3 +23,7 @@ once_cell = "1.20.2"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 souvlaki = "0.7.3"
+
+[target.'cfg(target_os = "android")'.dependencies]
+ndk-context = "0.1.1"
+jni = "0.21.1"
