--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -18,6 +18,7 @@ prost = "0.12.6"
 tokio = { version = "1.40.0", features = ["sync", "time", "rt-multi-thread"] }
 sea-orm = "1.1.0"
 database = { path = "../../database" }
+analysis = { path = "../../analysis" }
 playback = { path = "../../playback" }
 lazy_static = "1.5.0"
 dunce = "1.0.4"
