--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -32,4 +32,4 @@ seq-macro = "0.3.5"
 once_cell = "1.19.0"
 rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
-windows = "0.58.0"
+windows = { version="0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
