--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,6 +156,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y liblmdb0 jq librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
 
+      - name: Patch Environment
+        run: |
+          # https://github.com/actions/runner/issues/2033
+          chown -R $(id -u):$(id -g) $PWD
+          git config --global --add safe.directory '*'
+       
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
