--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
+          sudo apt-get install -y liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -143,6 +143,72 @@ jobs:
         with:
           path: build/linux/x64/release/bundle/
           name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-linux
+
+  build-steam-sniper:
+    runs-on: ubuntu-latest
+    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y liblmdb0 jq librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev
+
+      - name: Patch Environment
+        run: |
+          # https://github.com/actions/runner/issues/2033
+          chown -R $(id -u):$(id -g) $PWD
+          git config --global --add safe.directory '*'
+       
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Setup Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - uses: Swatinem/rust-cache@v2
+      
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "26.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install the Rust dependencies
+        run: cargo install 'flutter_rust_bridge_codegen' rinf protoc-gen-prost
+        
+      - name: Activate Protobuf
+        run: flutter pub global activate protoc_plugin
+
+      - name: Flutter pub get
+        run: flutter pub get
+
+      - name: Generate message files
+        run: rinf message 
+
+      - name: Build linux
+        run: flutter build linux --release --verbose
+
+      - uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 7
+      
+      - name: Copy Steam Launch Scripts
+        run: |
+          chmod +x scripts/steam/*
+          cp -r scripts/steam/* build/linux/x64/release/bundle/
+
+
+      - name: Upload artifact 
+        uses: actions/upload-artifact@v4
+        with:
+          path: build/linux/x64/release/bundle/
+          name: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-steam-sniper
 
   release-linux:
     permissions:
