--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
   protobuf: ^3.1.0
   fluent_ui:
     git:
@@ -73,6 +71,7 @@ dependencies:
   macos_secure_bookmarks: ^0.2.1
   permission_handler: ^11.3.1
   animated_flip_counter: ^0.3.4
+  intl: ^0.19.0
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -88,7 +87,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -115,13 +113,10 @@ flutter:
     - assets/branding-text.svg
     - assets/startup_0.ogg
     - assets/startup_1.ogg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -141,3 +136,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
