--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -24,3 +24,4 @@ tokio-util = "0.7.11"
 rand = "0.8.5"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 tracing-subscriber = "0.3.18"
+realfft = "3.4.0"
