--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   permission_handler: ^11.3.1
   animated_flip_counter: ^0.3.4
   intl: ^0.19.0
+  window_manager: ^0.4.3
 
 dev_dependencies:
   build_runner: ^2.4.11
