--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -8,6 +8,13 @@ publish = false
 name = "analysis"
 path = "src/lib.rs"
 
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "analysis_benchmark"
+harness = false
+
 [dependencies]
 anyhow = {version="1.0.86",  features = ["backtrace"] }
 lazy_static = "1.5.0"
@@ -24,3 +31,4 @@ tokio-util = "0.7.11"
 rand = "0.8.5"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 tracing-subscriber = "0.3.18"
+realfft = "3.4.0"
