--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -33,3 +33,4 @@ once_cell = "1.19.0"
 rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
 windows = { version="0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
+async-trait = "0.1.83"
